[package]
name = "kartel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
rusqlite = {version= "0.28.0", features = ["bundled"] }
teloxide = { version = "0.11.3", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
sentry = "0.29.0"