[package]
name = "kartel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
# diesel = { version = "2.0.2", features = ["sqlite"] }

reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
sentry = "0.29.0"
