[package]
name = "kartel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", default-features = false, features = ["macros", "webhooks-axum", "rustls", "ctrlc_handler"] }
dptree = "0.3"
bytes = "1.3"
axum = { version = "0.7" }
# diesel = { version = "2.0.2", features = ["sqlite"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
configrs = "0.1"
thiserror = "1"
anyhow = "1"
strum = "0.27"
strum_macros = "0.27"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
regex = "1"
async-trait = "0.1"
rand = "0.8"

accounting = { version = "0.2.0", features = ["decimal"] }

# log = "0.4"
# pretty_env_logger = "0.4"
# sentry = "0.29.0"
